little refactoring :satisfied:

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="canonical" href="https://ikeagold.github.io/">
         <!--[if IEMobile]><meta http-equiv="cleartype" content="on"><![endif]-->
         <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
-        <style>body{font-family:'Noto Sans','Helvetica Neue',Roboto,'Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{margin:0;font-size:1.5em}h2{margin:0;font-size:1.1em}summary:focus{outline:0}address{display:inline}a,a:visited{border:none;background:linear-gradient(#454545,#454545) bottom/100% 1px no-repeat;transition:background-size .2s,color .1s .1s;color:#454545;margin:0 .2em;text-decoration:none}a:active,a:hover{color:#fafafa;background-size:100% 100%}.dashed{border-bottom:1px dashed #454545}.ulist{padding:10px 0;width:49%;display:inline-block;vertical-align:top}.more{cursor:pointer}::-moz-selection{background:#f7df31}::selection{background:#f7df31}@media print{body{background:0 0!important;text-shadow:none!important}a,a:visited{color:#444!important}a[href]:after{content:' (' attr(href) ')'}abbr[title]:after{content:' (' attr(title) ')'}a:after{content:''}blockquote,pre{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}img,tr{page-break-inside:avoid}p{orphans:3;widows:3}h2,h3{orphans:3;widows:3;page-break-after:avoid}}</style>
+        <style>body{font-family:'Noto Sans','Helvetica Neue',Roboto,'Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{margin:0;font-size:1.5em}h2{margin:0;font-size:1.1em}summary:focus{outline:0}address{display:inline}a,a:visited{border:none;background:linear-gradient(#454545,#454545) bottom/100% 1px no-repeat;transition:background-size .2s,color .1s .1s;color:#454545;text-decoration:none}a:active,a:hover{color:#fafafa;background-size:100% 100%}address>a,address>a:visited{display:inline-block;margin:.3em .2em 0}.dashed{border-bottom:1px dashed #454545}.ulist{padding:10px 0;width:49%;display:inline-block;vertical-align:top}.more{cursor:pointer}::-moz-selection{background:#f7df31}::selection{background:#f7df31}@media print{body{background:0 0!important;text-shadow:none!important}a,a:visited{color:#444!important}a[href]:after{content:' (' attr(href) ')'}abbr[title]:after{content:' (' attr(title) ')'}a:after{content:''}blockquote,pre{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}img,tr{page-break-inside:avoid}p{orphans:3;widows:3}h2,h3{orphans:3;widows:3;page-break-after:avoid}}</style>
     </head>
 
     <body itemscope itemtype="http://schema.org/Person">
@@ -38,20 +38,20 @@
         <main role="main">
             <div class="ulist">
                 <strong><em>Skills:</em></strong>
-                <br/>HTML, CSS, SCSS, JavaScript, ES6/7, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
+                <br/>HTML, CSS, SCSS, JavaScript, ES6/7, PHP, AngularJS, Ionic, WordPress, Yii, SQL, NodeJS, PhoneGap, Bootstrap
             </div>
             <div class="ulist">
                 <strong><em>&lt;/&gt; with:</em></strong>
-                <br/>Atom, PHPStorm, RubyMine, Composer, Bower, PostCSS, NodeJS, Xdebug, Spy-Js, Emmet, cdn.jsdelivr.net
+                <br/>Atom, PHPStorm, Composer, Bower, Xdebug, Spy-Js, Emmet
             </div>
             <br/>
             <details>
                 <summary><strong><em class="dashed more">More:</em></strong></summary>
-                <p><em>Knows:</em> ST3, Brackets, normalize.css, html5shiv.js
-                    <br/><br/><em>Have experience with</em>: Less/Sass, BabelJS, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Bundler, Laravel, OpenCart, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, ADAM
-                </p>
+                <p>
+					<em>Knows:</em> ST3, Brackets, normalize.css, reset.css, polyfills and fallbacks for older browsers
+                    <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite / TweenMax, VelocityJS, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, ADAM
+				</p>
             </details>
-            <br/>I am not looking for a job.
             <br/>Currently an <span itemprop="jobTitle">Web-Developer</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) working on creating applications and websites.
         </main>
 
