:arrow_up: QA, jasmine, etc

--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                 <summary><strong><em class="dashed more">More:</em></strong></summary>
                 <p>
 					<em>Knows:</em> ST3, Brackets, normalize.css, reset.css, polyfills and fallbacks for older browsers
-                    <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite / TweenMax, VelocityJS, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, ADAM
+                    <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, ADAM
 				</p>
             </details>
-            <br/>Currently an <span itemprop="jobTitle">Web-Developer</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) working on creating applications and websites.
         </main>
 
         <br/>
