:arrow_up: git glitch

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, ADAM
 				</p>
             </details>
+            <br/>Currently an <span itemprop="jobTitle">Web-Developer</span> &amp; QA at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio working on creation of high-performance apps &amp; websites.
         </main>
 
         <br/>
