:arrow_up: Web Workers :yum:

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <summary><strong><em class="dashed more">More:</em></strong></summary>
                 <p>
 					<em>Knows:</em> ST3, Brackets, normalize.css, reset.css, polyfills and fallbacks for older browsers
-                    <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Intern/Nightwatch/Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, ADAM
+                    <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Intern/Nightwatch/Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, Web Workers, ADAM
 				</p>
             </details>
             <br/>Currently an <span itemprop="jobTitle">Web-Developer</span> &amp; QA at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio working on creation of high-performance apps &amp; websites.
