:arrow_up: Zsh :+1:

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="ulist">
                 <strong><em>&lt;/&gt; with:</em></strong>
-                <br/>Atom, web/phpStorm, Composer, Bower, Xdebug, Spy-Js, Emmet
+                <br/>Atom, web/phpStorm, Zsh, Composer, Bower, Xdebug, Spy-Js, Emmet
             </div>
             <br/>
             <details>
