LiveStream upd :camera: :o: :octocat:

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Intern/Nightwatch/Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, Web Workers, UIkit, ADAM
 				</p>
             </details>
-            <br/>Currently an <span itemprop="jobTitle">Web-Developer</span> &amp; QA at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio working on creation of high-performance apps &amp; websites.
+            <br/>Currently an <span itemprop="jobTitle">Front-End Engineer</span> at <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> &amp; <span itemprop="jobTitle">Web-Evangelist</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio, working on creation of high-performance apps &amp; websites.
+            <br/>I am not looking for a job.
         </main>
 
         <br/>
@@ -65,11 +66,11 @@
                 <a href="skype:isterik13?chat">Skype</a>,
                 <a href="https://github.com/ikeagold" target="_blank">GitHub</a>,
                 <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank">Google+</a>,
-                <a href="http://toster.ru/user/ikeagold" target="_blank">Toster</a>,
-                <a href="http://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>,
+                <!-- <a href="http://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
+                <!-- <a href="http://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
                 <a href="http://codepen.io/ikeagold" target="_blank">CodePen</a>,
-                <a href="http://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>,
-                <a href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>,
+                <!-- <a href="http://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
+                <!-- <a href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
                 <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238" target="_blank">
                     <abbr title="Microsoft Virtual Academy">MVA</abbr>
                 </a>
