:arrow_up: new skype

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <br/>
             <address>
                 <a class="dashed" href="http://www.google.com/recaptcha/mailhide/d?k=01DzQH5F9TxxAudBqco6mMew==&amp;c=rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501DzQH5F9TxxAudBqco6mMew\75\75\46c\75rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">i...@gmail.com</a>,
-                <a href="skype:isterik13?chat">Skype</a>,
+                <a href="skype:arthur.parkhisenko?chat">Skype</a>,
                 <a href="https://github.com/ikeagold" target="_blank">GitHub</a>,
                 <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank">Google+</a>,
                 <!-- <a href="http://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
