--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Intern/Nightwatch/Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, Web Workers, UIkit, ADAM
 				</p>
             </details>
-            <br/>Currently an <span itemprop="jobTitle">Front-End Engineer</span> at <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> &amp; <span itemprop="jobTitle">Web-Evangelist</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio, working on creation of high-performance apps &amp; websites.
+            <br/>Currently an <span itemprop="jobTitle">Front End Engineer</span> at <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> &amp; <span itemprop="jobTitle">Web-Evangelist</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio, working on creation of high-performance apps &amp; websites.
             <br/>I am not looking for a job.
         </main>
 
@@ -83,3 +83,4 @@
     </body>
 
 </html>
+<!-- they said i was a psycho... but look at me now, all up in the interwebs ;) -->
