--- a/index.html
+++ b/index.html
@@ -1,86 +1,101 @@
 <!doctype html>
 <html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
 
-    <head>
-        <title>Arthur Parkhisenko - Web-Developer | Ikeagold</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="I am creating custom applications and websites.">
-        <meta name="keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
-        <meta name="author" content="Arthur Parkhisenko">
-        <meta name="HandheldFriendly" content="True">
-        <meta name="MobileOptimized" content="320">
-        <meta property="og:locale" content="en">
-        <meta property="og:title" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
-        <meta property="og:description" content="I am creating custom applications and websites.">
-        <meta property="og:site_name" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://ikeagold.github.io/">
-        <meta property="og:keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
-        <meta name="dc.language" content="en">
-        <meta name="dc.title" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
-        <meta name="dc.description" content="I am creating custom applications and websites.">
-        <meta name="dc.creator" content="Arthur Parkhisenko">
-        <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
-        <link rel="canonical" href="https://ikeagold.github.io/">
-        <!--[if IEMobile]><meta http-equiv="cleartype" content="on"><![endif]-->
-        <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
-        <style>body{font-family:'Noto Sans','Helvetica Neue',Roboto,'Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#444;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{margin:0;font-size:1.5em}h2{margin:0;font-size:1.1em}summary:focus{outline:0}address{display:inline}a,a:visited{border:none;background:linear-gradient(#444,#444) bottom/100% 1px no-repeat;transition:background-size .2s,color .1s .1s;color:#444;text-decoration:none}a:active,a:hover{color:#fafafa;background-size:100% 100%}address>a,address>a:visited{display:inline-block;margin:.3em .2em 0}.dashed{border-bottom:1px dashed #444}.ulist{padding:10px 0;display:inline-block;vertical-align:top}.ulist:nth-of-type(1){width:60%}.ulist:nth-of-type(2){width:38%}.more{cursor:pointer}::-moz-selection{background:#f7df31}::selection{background:#f7df31}@media print{body{background:0 0!important;text-shadow:none!important}a,a:visited{color:#444!important}a[href]:after{content:' (' attr(href) ')'}abbr[title]:after{content:' (' attr(title) ')'}a:after{content:''}img{page-break-inside:avoid}p{orphans:3;widows:3}h2,h3{orphans:3;widows:3;page-break-after:avoid}}</style>
-    </head>
+<head>
+  <title>Arthur Parkhisenko - Web-Developer | Ikeagold</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="I am creating custom applications and websites.">
+  <meta name="keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
+  <meta name="author" content="Arthur Parkhisenko">
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
+  <meta property="og:locale" content="en">
+  <meta property="og:title" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
+  <meta property="og:description" content="I am creating custom applications and websites.">
+  <meta property="og:site_name" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ikeagold.github.io/">
+  <meta property="og:keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
+  <meta name="dc.language" content="en">
+  <meta name="dc.title" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
+  <meta name="dc.description" content="I am creating custom applications and websites.">
+  <meta name="dc.creator" content="Arthur Parkhisenko">
+  <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
+  <link rel="canonical" href="https://ikeagold.github.io/">
+  <!--[if IEMobile]><meta http-equiv="cleartype" content="on"><![endif]-->
+  <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
+  <style>h1,h2{margin:0}body{font-family:'Noto Sans','Helvetica Neue',Roboto,'Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#444;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{font-size:1.5em}h2{font-size:1.1em}summary:focus{outline:0}address{display:inline}a,a:visited{color:#444;text-decoration:none;border-bottom:1px solid #444}a:active,a:hover{border-bottom-style:dashed}address>a,address>a:visited{display:inline-block;margin:.3em .2em 0}.dashed{border-bottom:1px dashed #444}.ulist{padding:10px 0;display:inline-block;vertical-align:top}.ulist:nth-of-type(1){width:60%}.ulist:nth-of-type(2){width:38%}.more{cursor:pointer}::-moz-selection{background:#f7df31}::selection{background:#f7df31}@media print{h2,h3,p{orphans:3;widows:3}body{background:0 0!important;text-shadow:none!important}a,a:visited{color:#444!important}a[href]:after{content:' (' attr(href) ')'}abbr[title]:after{content:' (' attr(title) ')'}a:after{content:''}img{page-break-inside:avoid}h2,h3{page-break-after:avoid}}</style>
+</head>
 
-    <body itemscope itemtype="http://schema.org/Person">
-        <header role="banner">
-            <!-- img itemprop="image" float left and padding right -->
-            <h1 itemprop="name">Arthur Parkhisenko</h1>
-            <h2>www. www always changes</h2>
-        </header>
+<body itemscope itemtype="http://schema.org/Person">
+  <header role="banner">
+    <!-- img itemprop="image" float left and padding right -->
+    <h1 itemprop="name">Arthur Parkhisenko</h1>
+    <h2>www. www always changes</h2>
+  </header>
 
-        <main role="main">
-            <div class="ulist">
-                <strong><em>Skills:</em></strong>
-                <br/>HTML, CSS, SCSS, JavaScript, ES6/7, PHP, AngularJS, Ionic, WordPress, Yii, SQL, NodeJS, PhoneGap, Bootstrap
-            </div>
-            <div class="ulist">
-                <strong><em>&lt;/&gt; with:</em></strong>
-                <br/>Atom, web/phpStorm, Zsh, Vagrant, Composer, Bower, Xdebug, Spy-Js, Emmet
-            </div>
-            <br/>
-            <details>
-                <summary><strong><em class="dashed more">More:</em></strong></summary>
-                <p>
-					<em>Knows:</em> ST3, Brackets, normalize.css, reset.css, polyfills and fallbacks for older browsers
-                    <br/><br/><em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Intern/Nightwatch/Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator, Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, Web Workers, UIkit, ADAM
-				</p>
-            </details>
-            <br/>Currently an <span itemprop="jobTitle">Front End Engineer</span> at <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> &amp; <span itemprop="jobTitle">Web-Evangelist</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio, working on creation of high-performance apps &amp; websites.
-            <br/>I am not looking for a job.
-        </main>
-
+  <main role="main">
+    <div class="ulist">
+      <strong>
+        <em>Skills:</em>
+      </strong>
+      <br/>HTML, CSS, SCSS, JavaScript, ES6/7, PHP, AngularJS, Ionic, WordPress, Yii, SQL, NodeJS, PhoneGap, Bootstrap
+    </div>
+    <div class="ulist">
+      <strong>
+        <em>&lt;/&gt; with:</em>
+      </strong>
+      <br/>Atom, web/phpStorm, Zsh, Vagrant, Composer, Bower, Xdebug, Spy-Js, Emmet
+    </div>
+    <br/>
+    <details>
+      <summary>
+        <strong>
+          <em class="dashed more">More:</em>
+        </strong>
+      </summary>
+      <p>
+        <em>Knows:</em> ST3, Brackets, normalize.css, reset.css, polyfills and fallbacks for older browsers
         <br/>
+        <br/>
+        <em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Intern/Nightwatch/Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator,
+        Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, Web Workers, UIkit, ADAM
+      </p>
+    </details>
+    <br/>Currently an
+    <span itemprop="jobTitle">Front End Engineer</span> at <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> &amp;
+    <span itemprop="jobTitle">Web-Evangelist</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio, working on creation of high-performance apps &amp; websites.
+    <br/>I am not looking for a job.
+  </main>
 
-        <footer role="contentinfo">
-            Feel free to contact me for any cooperation. I reply back soon ^^:
-            <br/>
-            <address>
-                <a class="dashed" href="http://www.google.com/recaptcha/mailhide/d?k=01DzQH5F9TxxAudBqco6mMew==&amp;c=rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501DzQH5F9TxxAudBqco6mMew\75\75\46c\75rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">i...@gmail.com</a>,
-                <a href="skype:arthur.parkhisenko?chat">Skype</a>,
-                <a href="https://github.com/ikeagold" target="_blank">GitHub</a>,
-                <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank">Google+</a>,
-                <!-- <a href="http://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
-                <!-- <a href="http://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
-                <a href="http://codepen.io/ikeagold" target="_blank">CodePen</a>,
-                <!-- <a href="http://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
-                <!-- <a href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
-                <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238" target="_blank">
-                    <abbr title="Microsoft Virtual Academy">MVA</abbr>
-                </a>
-            </address>
-            <br/><br/>
-            <small><a href="http://creativecommons.org/publicdomain/zero/1.0/" target="_blank">the cake is a lie</a></small>
-        </footer>
+  <br/>
 
-        <script>!function(a,b,c,d,e){a.GoogleAnalyticsObject=c,a[c]||(a[c]=function(){(a[c].q=a[c].q||[]).push(arguments)}),a[c].l=+new Date,d=b.createElement("script"),e=b.scripts[0],d.src="//www.google-analytics.com/analytics.js",e.parentNode.insertBefore(d,e)}(window,document,"ga"),ga("create","UA-36592065-4"),ga("send","pageview");</script>
-    </body>
+  <footer role="contentinfo">
+    Feel free to contact me for any cooperation. I reply back soon ^^:
+    <br/>
+    <address>
+      <a href="http://www.google.com/recaptcha/mailhide/d?k=01DzQH5F9TxxAudBqco6mMew==&amp;c=rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501DzQH5F9TxxAudBqco6mMew\75\75\46c\75rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
+      title="Reveal this e-mail address">i...@gmail.com</a>,
+      <a href="skype:arthur.parkhisenko?chat">Skype</a>,
+      <a href="https://github.com/ikeagold" target="_blank">GitHub</a>,
+      <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank">Google+</a>,
+      <!-- <a href="http://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
+      <!-- <a href="http://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
+      <a href="http://codepen.io/ikeagold" target="_blank">CodePen</a>,
+      <!-- <a href="http://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
+      <!-- <a href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
+      <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238" target="_blank">
+        <abbr title="Microsoft Virtual Academy">MVA</abbr>
+      </a>
+    </address>
+    <br/>
+    <br/>
+    <small><a href="http://creativecommons.org/publicdomain/zero/1.0/" target="_blank">the cake is a lie</a></small>
+  </footer>
+
+  <script>!function(e,t,n,a,c){e.GoogleAnalyticsObject=n,e[n]||(e[n]=function(){(e[n].q=e[n].q||[]).push(arguments)}),e[n].l=+new Date,a=t.createElement("script"),c=t.scripts[0],a.src="//www.google-analytics.com/analytics.js",c.parentNode.insertBefore(a,c)}(window,document,"ga"),ga("create","UA-36592065-4"),ga("send","pageview");</script>
+</body>
 
 </html>
 <!-- they said i was a psycho... but look at me now, all up in the interwebs ;) -->
