:zap: renamed, redesigned, updated

--- a/index.html
+++ b/index.html
@@ -1,101 +1,52 @@
 <!doctype html>
-<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
-
+<html lang=en dir=ltr>
 <head>
-  <title>Arthur Parkhisenko - Web-Developer | Ikeagold</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="I am creating custom applications and websites.">
-  <meta name="keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
-  <meta name="author" content="Arthur Parkhisenko">
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
-  <meta property="og:locale" content="en">
-  <meta property="og:title" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
-  <meta property="og:description" content="I am creating custom applications and websites.">
-  <meta property="og:site_name" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ikeagold.github.io/">
-  <meta property="og:keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
-  <meta name="dc.language" content="en">
-  <meta name="dc.title" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
-  <meta name="dc.description" content="I am creating custom applications and websites.">
-  <meta name="dc.creator" content="Arthur Parkhisenko">
-  <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
-  <link rel="canonical" href="https://ikeagold.github.io/">
-  <!--[if IEMobile]><meta http-equiv="cleartype" content="on"><![endif]-->
-  <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
-  <style>h1,h2{margin:0}body{font-family:'Noto Sans','Helvetica Neue',Roboto,'Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#444;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{font-size:1.5em}h2{font-size:1.1em}summary:focus{outline:0}address{display:inline}a,a:visited{color:#444;text-decoration:none;border-bottom:1px solid #444}a:active,a:hover{border-bottom-style:dashed}address>a,address>a:visited{display:inline-block;margin:.3em .2em 0}.dashed{border-bottom:1px dashed #444}.ulist{padding:10px 0;display:inline-block;vertical-align:top}.ulist:nth-of-type(1){width:60%}.ulist:nth-of-type(2){width:38%}.more{cursor:pointer}::-moz-selection{background:#f7df31}::selection{background:#f7df31}@media print{h2,h3,p{orphans:3;widows:3}body{background:0 0!important;text-shadow:none!important}a,a:visited{color:#444!important}a[href]:after{content:' (' attr(href) ')'}abbr[title]:after{content:' (' attr(title) ')'}a:after{content:''}img{page-break-inside:avoid}h2,h3{page-break-after:avoid}}</style>
+<meta charset=utf-8>
+<title>Artur Parkhisenko - Engineer | Ikeagold</title>
+<meta name=viewport content="width=device-width, initial-scale=1">
+<meta name=description content="www. www always changes">
+<meta name=keywords content="ikeagold, Artur Parkhisenko, JavaScript, web components, devtools, js, css, mvc, app, applications, web development">
+<meta name=author content="Artur Parkhisenko">
+<meta name=HandheldFriendly content=True>
+<meta name=MobileOptimized content=320>
+<meta name=mobile-web-app-capable content=yes>
+<meta name=google-site-verification content=RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo>
+<link rel=canonical href=https://ikeagold.github.io/>
+<link rel=preload href=fonts/vgasys-webfont.woff>
+<!--[if lt IE 9]><meta http-equiv=X-UA-Compatible content="IE=edge"><script src=//cdn.jsdelivr.net/g/html5shiv></script><![endif]-->
+<style>html{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;box-sizing:border-box;height:100%;background-color:#2b2b2b}body{font-family:'vgasysregular',-apple-system,BlinkMacSystemFont,'.SFNSDisplay-Regular','.SFNSText-Regular','SF UI Text','San Francisco','Noto Sans','Helvetica Neue','Roboto','Droid Sans','Oxygen','Lucida Grande','Segoe UI','Fira Sans',Ubuntu,Cantarell,Helvetica,Arial,sans-serif;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;box-sizing:border-box;margin:0;padding:2%;color:#d7b748;-webkit-font-smoothing:antialiased;text-rendering:optimizeSpeed;-webkit-box-flex:1;-webkit-flex-grow:1;-ms-flex-positive:1;flex-grow:1;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-webkit-animation:glitch 12s linear infinite;animation:glitch 12s linear infinite;will-change:opacity}.screen{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;overflow:auto;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;padding:2em;color:rgba(128,255,128,.8);border-radius:1em;background-color:#131;background-image:-webkit-radial-gradient(50% 90%,ellipse 500% 100%,transparent,#121);background-image:radial-gradient(ellipse 500% 100% at 50% 90%,transparent,#121);background-position:center;box-shadow:inset 0 0 10em 1em rgba(0,0,0,.5);-webkit-box-flex:1;-webkit-flex-grow:1;-ms-flex-positive:1;flex-grow:1;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center}.screen:before{position:absolute;top:0;right:0;bottom:0;left:0;display:block;content:'';-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-webkit-animation:scan 8s linear 0s infinite;animation:scan 8s linear 0s infinite;pointer-events:none;background-image:-webkit-linear-gradient(90deg,transparent 0,rgba(32,128,32,.2) 2%,rgba(32,128,32,.8) 3%,rgba(32,128,32,.2) 3%,transparent 100%);background-image:linear-gradient(0deg,transparent 0,rgba(32,128,32,.2) 2%,rgba(32,128,32,.8) 3%,rgba(32,128,32,.2) 3%,transparent 100%);background-repeat:no-repeat;will-change:transform}.screen:after{position:absolute;top:0;right:0;bottom:0;left:0;display:block;content:'';pointer-events:none;background-image:-webkit-radial-gradient(50% 15%,ellipse 50% 15%,rgba(255,255,255,.05),transparent),-webkit-radial-gradient(50% 12%,ellipse 50% 10%,rgba(255,255,255,.1),transparent),-webkit-radial-gradient(50% 10%,ellipse 50% 5%,rgba(255,255,255,.1),transparent),-webkit-radial-gradient(50% 9%,ellipse 50% 3%,rgba(255,255,255,.1),transparent),-webkit-radial-gradient(50% 0,ellipse 200% 20%,rgba(0,0,0,.5),transparent),-webkit-linear-gradient(90deg,rgba(0,0,0,.2) 50%,transparent 50%);background-image:radial-gradient(ellipse 50% 15% at 50% 15%,rgba(255,255,255,.05),transparent),radial-gradient(ellipse 50% 10% at 50% 12%,rgba(255,255,255,.1),transparent),radial-gradient(ellipse 50% 5% at 50% 10%,rgba(255,255,255,.1),transparent),radial-gradient(ellipse 50% 3% at 50% 9%,rgba(255,255,255,.1),transparent),radial-gradient(ellipse 200% 20% at 50% 0,rgba(0,0,0,.5),transparent),linear-gradient(0deg,rgba(0,0,0,.2) 50%,transparent 50%);background-size:100%,100%,100%,100%,100%,100% .25ch}.screen header,.screen main,.screen footer{line-height:150%;margin-bottom:1em;text-align:center;text-shadow:0 0 1ex #3f3,0 0 2px rgba(255,255,255,.8)}@-webkit-keyframes scan{0%{background-position:0 -100vh}35%,100%{background-position:0 100vh}}@keyframes scan{0%{background-position:0 -100vh}35%,100%{background-position:0 100vh}}@-webkit-keyframes glitch{0%{opacity:.8;filter:alpha(opacity=80)}10%{opacity:.6;filter:alpha(opacity=60)}20%{opacity:.7;filter:alpha(opacity=70)}30%{opacity:.5;filter:alpha(opacity=50)}40%{opacity:.6;filter:alpha(opacity=60)}50%{opacity:.6;filter:alpha(opacity=60)}54%{opacity:.8;filter:alpha(opacity=80)}58%{opacity:.6;filter:alpha(opacity=60)}60%{opacity:.6;filter:alpha(opacity=60)}65%{opacity:.7;filter:alpha(opacity=70)}70%{opacity:.5;filter:alpha(opacity=50)}80%{opacity:.6;filter:alpha(opacity=60)}90%{opacity:.7;filter:alpha(opacity=70)}93%{opacity:.8;filter:alpha(opacity=80)}96%{opacity:.6;filter:alpha(opacity=60)}100%{opacity:.7;filter:alpha(opacity=70)}}@keyframes glitch{0%{opacity:.8;filter:alpha(opacity=80)}10%{opacity:.6;filter:alpha(opacity=60)}20%{opacity:.7;filter:alpha(opacity=70)}30%{opacity:.5;filter:alpha(opacity=50)}40%{opacity:.6;filter:alpha(opacity=60)}50%{opacity:.6;filter:alpha(opacity=60)}54%{opacity:.8;filter:alpha(opacity=80)}58%{opacity:.6;filter:alpha(opacity=60)}60%{opacity:.6;filter:alpha(opacity=60)}65%{opacity:.7;filter:alpha(opacity=70)}70%{opacity:.5;filter:alpha(opacity=50)}80%{opacity:.6;filter:alpha(opacity=60)}90%{opacity:.7;filter:alpha(opacity=70)}93%{opacity:.8;filter:alpha(opacity=80)}96%{opacity:.6;filter:alpha(opacity=60)}100%{opacity:.7;filter:alpha(opacity=70)}}h1{font-size:1.6em;font-weight:400;margin:0}em{font-size:1.4em}main{font-size:1.2em}a,a:visited{padding:2px 10px;cursor:pointer;-webkit-transition:all .2s;transition:all .1s;text-decoration:none;color:#19ff81}a:active,a:hover{color:#f7df31;outline:2px solid;background:rgba(25,255,129,.2)}address>a,address>a:visited{display:inline-block;margin:.3em .2em 0}::-moz-selection{background:#f7df31}::selection{background:#f7df31}@media all and (min-width:40em){html{font-size:140%}}</style>
 </head>
-
-<body itemscope itemtype="http://schema.org/Person">
-  <header role="banner">
-    <!-- img itemprop="image" float left and padding right -->
-    <h1 itemprop="name">Arthur Parkhisenko</h1>
-    <h2>www. www always changes</h2>
-  </header>
-
-  <main role="main">
-    <div class="ulist">
-      <strong>
-        <em>Skills:</em>
-      </strong>
-      <br/>HTML, CSS, SCSS, JavaScript, ES6/7, PHP, AngularJS, Ionic, WordPress, Yii, SQL, NodeJS, PhoneGap, Bootstrap
-    </div>
-    <div class="ulist">
-      <strong>
-        <em>&lt;/&gt; with:</em>
-      </strong>
-      <br/>Atom, web/phpStorm, Zsh, Vagrant, Composer, Bower, Xdebug, Spy-Js, Emmet
-    </div>
-    <br/>
-    <details>
-      <summary>
-        <strong>
-          <em class="dashed more">More:</em>
-        </strong>
-      </summary>
-      <p>
-        <em>Knows:</em> ST3, Brackets, normalize.css, reset.css, polyfills and fallbacks for older browsers
-        <br/>
-        <br/>
-        <em>Have experience with</em>: Laravel, OpenCart, Less/Sass, PostCSS, BabelJS, TweenLite/TweenMax, VelocityJS, Yeoman, Modernizr, Intern/Nightwatch/Karma/Jasmine, Handlebars, Polymer, MongoDB, Ruby/RoR, RubyMine, Bundler, Nginx, Photoshop, Illustrator,
-        Gimp, skrollr, scrollMagic, cdn.jsdelivr.net, Web Workers, UIkit, ADAM
-      </p>
-    </details>
-    <br/>Currently an
-    <span itemprop="jobTitle">Front End Engineer</span> at <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> &amp;
-    <span itemprop="jobTitle">Web-Evangelist</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) studio, working on creation of high-performance apps &amp; websites.
-    <br/>I am not looking for a job.
-  </main>
-
-  <br/>
-
-  <footer role="contentinfo">
-    Feel free to contact me for any cooperation. I reply back soon ^^:
-    <br/>
-    <address>
-      <a href="http://www.google.com/recaptcha/mailhide/d?k=01DzQH5F9TxxAudBqco6mMew==&amp;c=rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501DzQH5F9TxxAudBqco6mMew\75\75\46c\75rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
-      title="Reveal this e-mail address">i...@gmail.com</a>,
-      <a href="skype:arthur.parkhisenko?chat">Skype</a>,
-      <a href="https://github.com/ikeagold" target="_blank">GitHub</a>,
-      <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank">Google+</a>,
-      <!-- <a href="http://toster.ru/user/ikeagold" target="_blank">Toster</a>, -->
-      <!-- <a href="http://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>, -->
-      <a href="http://codepen.io/ikeagold" target="_blank">CodePen</a>,
-      <!-- <a href="http://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>, -->
-      <!-- <a href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>, -->
-      <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238" target="_blank">
-        <abbr title="Microsoft Virtual Academy">MVA</abbr>
-      </a>
-    </address>
-    <br/>
-    <br/>
-    <small><a href="http://creativecommons.org/publicdomain/zero/1.0/" target="_blank">the cake is a lie</a></small>
-  </footer>
-
-  <script>!function(e,t,n,a,c){e.GoogleAnalyticsObject=n,e[n]||(e[n]=function(){(e[n].q=e[n].q||[]).push(arguments)}),e[n].l=+new Date,a=t.createElement("script"),c=t.scripts[0],a.src="//www.google-analytics.com/analytics.js",c.parentNode.insertBefore(a,c)}(window,document,"ga"),ga("create","UA-36592065-4"),ga("send","pageview");</script>
-</body>
-
-</html>
 <!-- they said i was a psycho... but look at me now, all up in the interwebs ;) -->
+<body itemscope itemtype=http://schema.org/Person>
+<div class=screen>
+<header role=banner>
+<h1 itemprop=name>Artur Parkhisenko</h1>
+<em>www. www always changes</em>
+</header>
+<br/>
+<main role=main>
+<strong>&lt;/&gt;</strong>
+<span itemprop=jobTitle>Engineer</span> @ <a href=https://livestream.com target=_blank itemprop=affiliation>LiveStream</a> &amp;
+<span itemprop=jobTitle>Web-Evangelist</span> @ <a href=http://flickshine.com target=_blank itemprop=affiliation>FlickShine</a>.
+</main>
+<br/>
+<footer role=contentinfo>
+<address>
+<a itemprop=skype href=skype:arthur.parkhisenko?chat>Skype</a>,
+<a itemprop=url href=https://github.com/ikeagold target=_blank>GitHub</a>,
+<a itemprop=url href=https://ua.linkedin.com/in/artur-parkhisenko-21440bb8 target=_blank>LinkedIn</a>,
+<br/>
+<a itemprop=url href="https://plus.google.com/115456555991025584178?rel=author" rel=publisher target=_blank>Google+</a>,
+<a itemprop=url href=https://twitter.com/lifeasecond target=_blank>Twitter</a>,
+<a itemprop=url href=http://codepen.io/ikeagold target=_blank>CodePen</a>,
+<a itemprop=url href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238" target=_blank>
+<abbr title="Microsoft Virtual Academy">MVA</abbr>
+</a>
+</address>
+<br/>
+<small><a href=http://creativecommons.org/publicdomain/zero/1.0/ target=_blank>the cake is a lie</a></small>
+</footer>
+</div>
+<script>!function(f,d,h,b,g){f.GoogleAnalyticsObject=h,f[h]||(f[h]=function(){(f[h].q=f[h].q||[]).push(arguments)}),f[h].l=+new Date,b=d.createElement("script"),g=d.scripts[0],b.src="//www.google-analytics.com/analytics.js",g.parentNode.insertBefore(b,g)}(window,document,"ga"),ga("create","UA-36592065-4"),ga("send","pageview");(function(){var e="./fonts/stylesheet.css";function b(f,g,h){if(f.addEventListener){f.addEventListener(g,h,false)}else{if(f.attachEvent){f.attachEvent("on"+g,h)}}}if((window.localStorage&&localStorage.font_css_cache)||document.cookie.indexOf("font_css_cache")>-1){c()}else{b(window,"load",c)}function a(f){return window.localStorage&&localStorage.font_css_cache&&(localStorage.font_css_cache_file===f)}function c(){if(!window.localStorage||!window.XMLHttpRequest){var f=document.createElement("link");f.href=e;f.rel="stylesheet";f.type="text/css";document.getElementsByTagName("head")[0].appendChild(f);document.cookie="font_css_cache"}else{if(a(e)){d(localStorage.font_css_cache)}else{var g=new XMLHttpRequest();g.open("GET",e,true);g.onreadystatechange=function(){if(g.readyState===4){d(g.responseText);localStorage.font_css_cache=g.responseText;localStorage.font_css_cache_file=e}};g.send()}}}function d(g){var f=document.createElement("style");f.setAttribute("type","text/css");if(f.styleSheet){f.styleSheet.cssText=g}else{f.innerHTML=g}document.getElementsByTagName("head")[0].appendChild(f)}}());</script>
+</body>
+</html>
