:seedling: updated github profile url

--- a/index-src.html
+++ b/index-src.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Artur Parkhisenko - Engineer | Ikeagold</title>
+  <title>Artur Parkhisenko - Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="www. www always changes">
   <meta name="keywords" content="ikeagold, Artur Parkhisenko, JavaScript, web components, devtools, js, css, mvc, app, applications, web development">
@@ -12,7 +12,7 @@
   <meta name="MobileOptimized" content="320">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
-  <link rel="canonical" href="https://ikeagold.github.io/">
+  <link rel="canonical" href="https://arturparkhisenko.github.io/">
   <link rel="preload" href="fonts/vgasys-webfont.woff">
   <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
 
@@ -361,7 +361,7 @@
     <footer role="contentinfo">
       <address>
         <a itemprop="skype" href="skype:arthur.parkhisenko?chat">Skype</a>,
-        <a itemprop="url" href="https://github.com/ikeagold" target="_blank">GitHub</a>,
+        <a itemprop="url" href="https://github.com/arturparkhisenko" target="_blank">GitHub</a>,
         <a itemprop="url" href="https://ua.linkedin.com/in/artur-parkhisenko-21440bb8" target="_blank">LinkedIn</a>,
         <br/>
         <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank">Google+</a>,
