--- a/index-src.html
+++ b/index-src.html
@@ -85,7 +85,7 @@
       -ms-flex-pack: center;
       justify-content: center;
     }
-
+    
     .screen:before {
       position: absolute;
       top: 0;
@@ -94,11 +94,13 @@
       left: 0;
       display: block;
       content: '';
+      overflow: hidden;
       -webkit-transform: translate3d(0, 0, 0);
       transform: translate3d(0, 0, 0);
       -webkit-animation: scan 8s linear 0s infinite;
       animation: scan 8s linear 0s infinite;
       pointer-events: none;
+      border-radius: 1em;
       background-image: -webkit-linear-gradient(90deg, transparent 0%, rgba(32, 128, 32, .2) 2%, rgba(32, 128, 32, .8) 3%, rgba(32, 128, 32, .2) 3%, transparent 100%);
       background-image: linear-gradient(0deg, transparent 0%, rgba(32, 128, 32, .2) 2%, rgba(32, 128, 32, .8) 3%, rgba(32, 128, 32, .2) 3%, transparent 100%);
       background-repeat: no-repeat;
@@ -319,7 +321,6 @@
       display: inline-block;
       margin: .3em .2em 0;
     }
-
     /*small > a {
       color: #f7df31;
     }*/
