:snowman: some improvements, added medium

--- a/index-src.html
+++ b/index-src.html
@@ -6,7 +6,7 @@
   <title>Artur Parkhisenko - Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="www. www always changes">
-  <meta name="keywords" content="ikeagold, Artur Parkhisenko, JavaScript, web components, devtools, js, css, mvc, app, applications, web development">
+  <meta name="keywords" content="Artur Parkhisenko, Engineer, Developer, Geek, JavaScript, Web Components, DevTools, HTML, JS, CSS, ikeagold">
   <meta name="author" content="Artur Parkhisenko">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
@@ -35,10 +35,9 @@
       display: flex;
       box-sizing: border-box;
       margin: 0;
-      padding: 2%;
-      color: #d7b748;
+      padding: 0;
+      /*color: #d7b748;*/
       -webkit-font-smoothing: antialiased;
-      /*text-rendering: optimizeLegibility;*/
       text-rendering: optimizeSpeed;
       -webkit-box-flex: 1;
       -webkit-flex-grow: 1;
@@ -70,7 +69,6 @@
       flex-direction: column;
       padding: 2em;
       color: rgba(128, 255, 128, .8);
-      border-radius: 1em;
       background-color: #131;
       background-image: -webkit-radial-gradient(50% 90%, ellipse 500% 100%, transparent, #121);
       background-image: radial-gradient(ellipse 500% 100% at 50% 90%, transparent, #121);
@@ -85,7 +83,7 @@
       -ms-flex-pack: center;
       justify-content: center;
     }
-    
+
     .screen:before {
       position: absolute;
       top: 0;
@@ -100,7 +98,6 @@
       -webkit-animation: scan 8s linear 0s infinite;
       animation: scan 8s linear 0s infinite;
       pointer-events: none;
-      border-radius: 1em;
       background-image: -webkit-linear-gradient(90deg, transparent 0%, rgba(32, 128, 32, .2) 2%, rgba(32, 128, 32, .8) 3%, rgba(32, 128, 32, .2) 3%, transparent 100%);
       background-image: linear-gradient(0deg, transparent 0%, rgba(32, 128, 32, .2) 2%, rgba(32, 128, 32, .8) 3%, rgba(32, 128, 32, .2) 3%, transparent 100%);
       background-repeat: no-repeat;
@@ -133,7 +130,6 @@
     @-webkit-keyframes scan {
       0% {
         background-position: 0 -100vh;
-        /*transform:translateX();*/
       }
       35%,
       100% {
@@ -356,14 +352,15 @@
     <main role="main">
       <strong>&lt;/&gt;</strong>
       <span itemprop="jobTitle">Engineer</span> @ <a href="https://livestream.com" target="_blank" itemprop="affiliation">LiveStream</a> &amp;
-      <span itemprop="jobTitle">Web-Evangelist</span> @ <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a>.
+      Geek @ <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a>
     </main>
     <br/>
     <footer role="contentinfo">
       <address>
         <a itemprop="skype" href="skype:arthur.parkhisenko?chat">Skype</a>,
-        <a itemprop="url" href="https://github.com/arturparkhisenko" target="_blank">GitHub</a>,
+        <a itemprop="url" href="https://github.com/arturparkhisenko">GitHub</a>,
         <a itemprop="url" href="https://ua.linkedin.com/in/artur-parkhisenko-21440bb8" target="_blank">LinkedIn</a>,
+        <a itemprop="url" href="https://medium.com/@ikeagold" target="_blank">Medium</a>,
         <br/>
         <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank">Google+</a>,
         <a itemprop="url" href="https://twitter.com/lifeasecond" target="_blank">Twitter</a>,
